# fast-pass

./: .gitignore  CMakeLists.txt  notes.txt
include/: client.hpp  client_game.hpp  config.hpp  cursor.hpp  driver.hpp  game.hpp  game_client.hpp  game_server.hpp  globals.hpp  input_system.hpp  messager_maker.hpp  player.hpp  player_body.hpp  player_system.hpp  random_generator.hpp  round.hpp  server.hpp  server_game.hpp  stats.hpp  structs.hpp  timer.hpp
src/: app.cpp  client.cpp  client_app.cpp  main.cpp  server.cpp  server_app.cpp  tests.cpp
